# protectinator

./: .gitignore  Cargo.toml  README.md  cc.txt
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
apps/protectinator-cli/: Cargo.toml  build.rs
apps/protectinator-cli/src/: main.rs
apps/protectinator-cli/src/commands/: agents.rs  container.rs  defense.rs  fim.rs  fleet.rs  harden.rs  info.rs  iot.rs  mod.rs  penalty_box.rs  persistence.rs  pkgmon.rs  privesc.rs  procmon.rs  remote.rs  report.rs  scan.rs  secrets.rs  sigma.rs  supply_chain.rs  verify.rs  yara.rs
apps/protectinator-web/: Cargo.toml
apps/protectinator-web/frontend/: app.js  index.html  style.css
apps/protectinator-web/src/: auth.rs  frontend.rs  main.rs  metrics.rs
apps/protectinator-web/src/api/: defense.rs  findings.rs  fleet.rs  hosts.rs  mod.rs  penaltybox.rs  reports.rs  sboms.rs  scans.rs  status.rs
crates/protectinator-advisory/: Cargo.toml
crates/protectinator-advisory/src/: cache.rs  classify.rs  debian.rs  error.rs  lib.rs
crates/protectinator-agents/: Cargo.toml
crates/protectinator-agents/src/: lib.rs  linux.rs  macos.rs  types.rs
crates/protectinator-agents/src/management/: endpoint.rs  mdm.rs  mod.rs  remote.rs
crates/protectinator-agents/src/rootkit/: mod.rs  modules.rs  processes.rs  signatures.rs
crates/protectinator-container/: Cargo.toml
crates/protectinator-container/src/: discover.rs  filesystem.rs  lib.rs  packages.rs  scanner.rs  types.rs
crates/protectinator-container/src/checks/: hardening.rs  mod.rs  os_version.rs  packages.rs  persistence.rs  rootkit.rs  suid.rs  vulnerability.rs
crates/protectinator-core/: Cargo.toml
crates/protectinator-core/src/: config.rs  error.rs  lib.rs  report.rs  suppress.rs  traits.rs
crates/protectinator-data/: Cargo.toml
crates/protectinator-data/src/: lib.rs  sbom_store.rs  scan_store.rs  types.rs  vuln_store.rs
crates/protectinator-defense/: Cargo.toml
crates/protectinator-defense/src/: audit.rs  executor.rs  lib.rs  remediate.rs
crates/protectinator-defense/src/checks/: auto_updates.rs  bruteforce.rs  firewall.rs  mod.rs  open_ports.rs
crates/protectinator-engine/: Cargo.toml
crates/protectinator-engine/src/: lib.rs  output.rs  runner.rs
crates/protectinator-fim/: Cargo.toml
crates/protectinator-fim/src/: database.rs  error.rs  hasher.rs  lib.rs  progress.rs  scanner.rs  verifier.rs
crates/protectinator-fleet/: Cargo.toml
crates/protectinator-fleet/src/: config.rs  lib.rs  notify.rs  runner.rs  types.rs
crates/protectinator-hardening/: Cargo.toml
crates/protectinator-hardening/src/: lib.rs
crates/protectinator-hardening/src/checks/: common.rs  linux.rs  macos.rs  mod.rs
crates/protectinator-iot/: Cargo.toml
crates/protectinator-iot/src/: lib.rs  platform.rs  scanner.rs  ssh_gather.rs  types.rs
crates/protectinator-iot/src/checks/: binary_integrity.rs  boot_integrity.rs  default_credentials.rs  device_tree.rs  iot_rootkit.rs  kernel_integrity.rs  mod.rs  motd_persistence.rs  network_services.rs  pam_audit.rs  tmpfiles_persistence.rs  udev_audit.rs
crates/protectinator-osverify/: Cargo.toml
crates/protectinator-osverify/src/: engine.rs  error.rs  lib.rs  manifest.rs
crates/protectinator-osverify/src/pkgmgr/: linux.rs  macos.rs  mod.rs
crates/protectinator-penaltybox/: Cargo.toml
crates/protectinator-penaltybox/src/: discovery.rs  lib.rs  manager.rs  profile.rs  restrictions.rs
crates/protectinator-persistence/: Cargo.toml
crates/protectinator-persistence/src/: lib.rs  linux.rs  macos.rs  types.rs
crates/protectinator-pkgmon/: Cargo.toml
crates/protectinator-pkgmon/src/: apt.rs  baseline.rs  flatpak.rs  homebrew.rs  homebrew_audit.rs  lib.rs  scanner.rs  types.rs
crates/protectinator-platform/: Cargo.toml
crates/protectinator-platform/src/: detection.rs  lib.rs  linux.rs  macos.rs
crates/protectinator-privesc/: Cargo.toml
crates/protectinator-privesc/src/: lib.rs  linux.rs  macos.rs  types.rs
crates/protectinator-procmon/: Cargo.toml
crates/protectinator-procmon/src/: connections.rs  lib.rs  processes.rs
crates/protectinator-remote/: Cargo.toml
crates/protectinator-remote/src/: agent.rs  agentless.rs  lib.rs  scanner.rs  ssh.rs  types.rs
crates/protectinator-report/: Cargo.toml
crates/protectinator-report/src/: lib.rs  pdf.rs
crates/protectinator-secrets/: Cargo.toml
crates/protectinator-secrets/src/: entropy.rs  lib.rs  patterns.rs  redact.rs  scanner.rs
crates/protectinator-secrets/src/checks/: env_vars.rs  git_history.rs  mod.rs  shell_history.rs
crates/protectinator-sigma/: Cargo.toml
crates/protectinator-sigma/src/: engine.rs  error.rs  event.rs  lib.rs  rule.rs
crates/protectinator-sigma/src/logsource/: file.rs  linux.rs  macos.rs  mod.rs
crates/protectinator-supply-chain/: Cargo.toml
crates/protectinator-supply-chain/src/: enrich.rs  feed.rs  gaol.rs  history.rs  lib.rs  pin.rs  sbom.rs  scanner.rs  trust.rs  types.rs
crates/protectinator-supply-chain/src/checks/: cicd_actions.rs  cicd_secrets.rs  lockfile_integrity.rs  malware_signatures.rs  mod.rs  npm_postinstall.rs  pip_build_hooks.rs  pth_injection.rs  registry_audit.rs  shell_profile.rs  user_systemd.rs  vulnerability.rs
crates/protectinator-supply-chain/src/lockfile/: cargo_lock.rs  mod.rs  npm_lock.rs  pipfile_lock.rs  pnpm_lock.rs  poetry_lock.rs  requirements_txt.rs  uv_lock.rs  yarn_lock.rs
crates/protectinator-supply-chain/src/osv/: mod.rs
crates/protectinator-yara/: Cargo.toml
crates/protectinator-yara/src/: lib.rs  rules.rs  scanner.rs
deploy/: README.md  fleet.toml  protectinator-fleet-scan.service  protectinator-fleet-scan.timer  protectinator-web.service  setup-euclid.sh  tailscale-serve-full.json  tailscale-serve.json
scripts/: build-release.sh  build-static.sh  zig-cc-aarch64-linux-musl
test_data/events/: test_events.json
test_data/sigma_rules/: powershell_detection.yml  ssh_brute_force.yml  suspicious_curl.yml
