[workspace]
resolver = "2"
members = [
    "crates/protectinator-core",
    "crates/protectinator-platform",
    "crates/protectinator-engine",
    "crates/protectinator-fim",
    "crates/protectinator-sigma",
    "crates/protectinator-hardening",
    "crates/protectinator-osverify",
    "crates/protectinator-persistence",
    "crates/protectinator-procmon",
    "crates/protectinator-yara",
    "crates/protectinator-privesc",
    "crates/protectinator-agents",
    "crates/protectinator-container",
    "crates/protectinator-iot",
    "crates/protectinator-supply-chain",
    "crates/protectinator-remote",
    "crates/protectinator-data",
    "crates/protectinator-report",
    "crates/protectinator-fleet",
    "crates/protectinator-advisory",
    "crates/protectinator-penaltybox",
    "crates/protectinator-secrets",
    "apps/protectinator-cli",
    "apps/protectinator-web",
]

[workspace.package]
version = "2026.3.28"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/natorinator/protectinator"
rust-version = "1.75"
authors = ["Protectinator Contributors"]
description = "A portable, zero-config security monitoring tool"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Hashing
sha2 = "0.10"
blake3 = "1.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File system
walkdir = "2"
glob = "0.3"
regex = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Resource embedding
rust-embed = { version = "8", features = ["compression"] }

# Parallel processing
rayon = "1.10"

# System info
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# HTTP client (minimal deps, rustls for TLS)
ureq = { version = "2.0", default-features = false, features = ["json", "tls"] }

# Internal crates
protectinator-core = { path = "crates/protectinator-core" }
protectinator-platform = { path = "crates/protectinator-platform" }
protectinator-engine = { path = "crates/protectinator-engine" }
protectinator-fim = { path = "crates/protectinator-fim" }
protectinator-sigma = { path = "crates/protectinator-sigma" }
protectinator-hardening = { path = "crates/protectinator-hardening" }
protectinator-osverify = { path = "crates/protectinator-osverify" }
protectinator-persistence = { path = "crates/protectinator-persistence" }
protectinator-procmon = { path = "crates/protectinator-procmon" }
protectinator-yara = { path = "crates/protectinator-yara" }
protectinator-privesc = { path = "crates/protectinator-privesc" }
protectinator-agents = { path = "crates/protectinator-agents" }
protectinator-container = { path = "crates/protectinator-container" }
protectinator-iot = { path = "crates/protectinator-iot" }
protectinator-supply-chain = { path = "crates/protectinator-supply-chain" }
protectinator-remote = { path = "crates/protectinator-remote" }
protectinator-data = { path = "crates/protectinator-data" }
protectinator-report = { path = "crates/protectinator-report" }
protectinator-fleet = { path = "crates/protectinator-fleet" }
protectinator-advisory = { path = "crates/protectinator-advisory" }
protectinator-penaltybox = { path = "crates/protectinator-penaltybox" }
protectinator-secrets = { path = "crates/protectinator-secrets" }

# Prometheus metrics
prometheus-client = "0.22"

# TOML parsing
toml = "0.8"

# PDF generation
genpdf = "0.2"

# Async runtime & web server
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Hashing (dpkg md5sums compatibility)
md-5 = "0.10"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.release-debug]
inherits = "release"
debug = true
strip = false
