[package]
name = "protectinator-advisory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CVE intelligence and remediation guidance for Protectinator"

[dependencies]
protectinator-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
