[package]
name = "protectinator-defense"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Defensive software audit checks for Protectinator"

[dependencies]
protectinator-core = { workspace = true }
protectinator-remote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
