[package]
name = "protectinator-fim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File integrity monitoring for Protectinator"

[dependencies]
protectinator-core = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
walkdir = { workspace = true }
rusqlite = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
chrono = { workspace = true }
