[package]
name = "protectinator-fim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File integrity monitoring — standalone or as a Protectinator module"

[features]
default = ["provider"]
provider = ["protectinator-core"]

[dependencies]
protectinator-core = { workspace = true, optional = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
walkdir = { workspace = true }
rusqlite = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
