[package]
name = "protectinator-fleet"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fleet management and multi-host scanning for Protectinator"

[dependencies]
protectinator-core = { workspace = true }
protectinator-data = { workspace = true }
protectinator-remote = { workspace = true }
protectinator-container = { workspace = true }
protectinator-supply-chain = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
ureq = { workspace = true }
