[package]
name = "protectinator-iot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IoT and Raspberry Pi security scanning for Protectinator"

[features]
default = ["ssh"]
ssh = ["dep:protectinator-remote", "dep:tempfile"]

[dependencies]
protectinator-core = { workspace = true }
protectinator-container = { workspace = true }
protectinator-remote = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }
md-5 = { workspace = true }
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
