[package]
name = "protectinator-penaltybox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Auto-sandbox vulnerable packages using Gaol/Landlock restrictions"

[dependencies]
protectinator-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
