[package]
name = "protectinator-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistence mechanism scanner for Protectinator"

[dependencies]
protectinator-core = { workspace = true }
protectinator-platform = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
