[package]
name = "protectinator-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform abstraction layer for Protectinator"

[dependencies]
protectinator-core = { workspace = true }
sysinfo = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "user", "process"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies can be added here
