[package]
name = "protectinator-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote host security scanning for Protectinator via SSH"

[dependencies]
protectinator-core = { workspace = true }
protectinator-container = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
ureq = { workspace = true }
rusqlite = { workspace = true }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
