[package]
name = "protectinator-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Secrets and credential scanning for Protectinator"

[dependencies]
protectinator-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
