[package]
name = "protectinator-sigma"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sigma rules engine for Protectinator"

[dependencies]
protectinator-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
sigma-rust = "0.7"
chrono = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
# For journald access
libsystemd = { version = "0.7", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# For unified log access via system_profiler/log command

[features]
default = []
journald = ["libsystemd"]
