[package]
name = "protectinator-supply-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Software supply chain security scanning for Protectinator"

[dependencies]
protectinator-core = { workspace = true }
protectinator-container = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
ureq = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
